--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -3,8 +3,6 @@ title: Robotics Simulators
 description: A (almost) complete list of robotics simulators
 ---
 
-@gutierrezDistributedRealtimeFramework2018
-
 This list is intended to be as complete as possible but obviously it is virtually impossible to list **ALL** the robot simulators out there, that's the reason why the “almost” in the description of this note. In case you know of a simulator that is not included in this list, here are the possible reasons for its absence:
 - I haven't updated the list yet: there are always new simulators.
 - I have not yet come across it: the simulator can be very niche.
@@ -38,7 +36,7 @@ What makes a robotics simulator a robotics simulator:
 | [ARTE](https://arvc.umh.es/arte/index_en.html) (A Robotics Toolbox for Education)           | @gilDevelopmentDeploymentNew2015              |                                                                                   |                                                                  |        |          | C++                                                                                                                                                | GNU LGPL             |        | [github](https://github.com/4rtur1t0/ARTE)                    |
 | [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           | Unity-based                                                                       | Unity-based                                                      |        |          | TPC-based messaging system                                                                                                                         |                      |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
 | [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      | UE-based                                                                          | UE-based                                                         |        |          | socket-based server-client                                                                                                                         | MIT License          |        | [github](https://github.com/carla-simulator/carla)            |
-| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/graspit-simulator/graspit)        |
+| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            | Bullet                                                                            | OpenGL                                                           |        |          |                                                                                                                                                    | GNU GPL              |        | [github](https://github.com/graspit-simulator/graspit)        |
 | [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/facebookresearch/habitat-sim)     |
 | [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | NVIDIAPhysX                                                                       |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
 | [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/morse-simulator/morse)            |
