init nodes in ROS multi-agent

--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -45,6 +45,7 @@ Intermediate - Tooling
 
 - Advanced subjects on nodes
 - [Security](ros2-security)
+- [Multi-agent](ros2-multi-agent)
 
 ## ROS 2 Control
 
