update list of simulators

--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -53,18 +53,19 @@ What makes a robotics simulator a robotics simulator:
 | [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
 | [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/mit-aera/FlightGoggles)           |
 | [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        | N/A, focus on dynamics                                                            | VTK,<br/>OpenGL,<br/>GltfClient                                  |        |          | C++, Python                                                                                                                                        | 3-Clause BSD License |        | [github](https://github.com/RobotLocomotion/drake)            |
-| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)                | @rohmerVREPVersatileScalable2013              |                                                                                   |                                                                  |        |          |                                                                                                                                                    | GNU GPL              |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
+| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)                | @rohmerVREPVersatileScalable2013              | Bullet,<br/>ODE,<br/>MuJoCo,<br/>Vortex,<br/>,Newton                              |                                                                  |        |          |                                                                                                                                                    | GNU GPL              |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
 
 
-
-Physics Engines:
-- [TPE](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo.
-- [DARTsim](https://dartsim.github.io/)
-- [Bullet](https://github.com/bulletphysics/bullet3)
-- [PhysX](https://github.com/NVIDIA-Omniverse/PhysX)
-- [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco)
-- [ODE (Open Dynamics Engine)](https://www.ode.org/), [bitbucket](https://bitbucket.org/odedevs/ode/src/master/)
-- (2D) [Chipmunk](https://chipmunk-physics.net/)
+| Physics Engine                                                                                                                        |                                                                                                              | License                                                                                    | Source Code                                                            |
+|---------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|------------------------------------------------------------------------|
+| [TPE](https://community.gazebosim.org/t/announcing-new-physics-engine-tpe-trivial-physics-engine/629)                                 | Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo. | Apache 2.0                                                                                 | [github](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) |
+| [Bullet](https://pybullet.org/wordpress/)                                                                                             |                                                                                                              | zlib                                                                                       | [github](https://github.com/bulletphysics/bullet3)                     |
+| [PhysX](https://nvidia-omniverse.github.io/PhysX/physx/5.5.1/)                                                                        |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/NVIDIA-Omniverse/PhysX)                    |
+| [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco) |                                                                                                              | Apache 2.0                                                                                 | [github](https://github.com/google-deepmind/mujoco)                    |
+| [ODE (Open Dynamics Engine)](https://www.ode.org/)                                                                                    |                                                                                                              | The GNU Lesser General Public License version 2.1 or any later.<br/>The BSD-style License. | [bitbucket](https://bitbucket.org/odedevs/ode/src/master/)             |
+| [Vortex Studio](https://www.cm-labs.com/en/vortex-studio/)                                                                            |                                                                                                              | Commercial                                                                                 | -                                                                      |
+| [Newton Dynamics](https://newtondynamics.com/forum/newton.php)                                                                        |                                                                                                              | zlib                                                                                       | [github](https://github.com/MADEAPPS/newton-dynamics/)                 |
+| (2D) [Chipmunk](https://chipmunk-physics.net/)                                                                                        |                                                                                                              |                                                                                            |                                                                        |
 
 Game engines:
 - [UE 4 uses PhysX as default](https://dev.epicgames.com/documentation/en-us/unreal-engine/physics?application_version=4.27), EpicGame is introducing [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) as future replacement for PhysX.
