add more info on simulators

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -742,3 +742,27 @@ DOI: 10.1007/11840541_68},
   isbn = {978-1-4673-1736-8 978-1-4673-1737-5 978-1-4673-1735-1},
   langid = {english}
 }
+@online{taoManiSkill3GPUParallelized2024,
+  title = {{{ManiSkill3}}: {{GPU Parallelized Robotics Simulation}} and {{Rendering}} for {{Generalizable Embodied AI}}},
+  shorttitle = {{{ManiSkill3}}},
+  author = {Tao, Stone and Xiang, Fanbo and Shukla, Arth and Qin, Yuzhe and Hinrichsen, Xander and Yuan, Xiaodi and Bao, Chen and Lin, Xinsong and Liu, Yulin and Chan, Tse-kai and Gao, Yuan and Li, Xuanlin and Mu, Tongzhou and Xiao, Nan and Gurha, Arnav and Huang, Zhiao and Calandra, Roberto and Chen, Rui and Luo, Shan and Su, Hao},
+  date = {2024-10-01},
+  eprint = {2410.00425},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2410.00425},
+  url = {http://arxiv.org/abs/2410.00425},
+  urldate = {2025-03-16},
+  abstract = {Simulation has enabled unprecedented compute-scalable approaches to robot learning. However, many existing simulation frameworks typically support a narrow range of scenes/tasks and lack features critical for scaling generalizable robotics and sim2real. We introduce and open source ManiSkill3, the fastest state-visual GPU parallelized robotics simulator with contact-rich physics targeting generalizable manipulation. ManiSkill3 supports GPU parallelization of many aspects including simulation+rendering, heterogeneous simulation, pointclouds/voxels visual input, and more. Simulation with rendering on ManiSkill3 can run 10-1000x faster with 2-3x less GPU memory usage than other platforms, achieving up to 30,000+ FPS in benchmarked environments due to minimal python/pytorch overhead in the system, simulation on the GPU, and the use of the SAPIEN parallel rendering system. Tasks that used to take hours to train can now take minutes. We further provide the most comprehensive range of GPU parallelized environments/tasks spanning 12 distinct domains including but not limited to mobile manipulation for tasks such as drawing, humanoids, and dextrous manipulation in realistic scenes designed by artists or real-world digital twins. In addition, millions of demonstration frames are provided from motion planning, RL, and teleoperation. ManiSkill3 also provides a comprehensive set of baselines that span popular RL and learning-from-demonstrations algorithms.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Robotics}
+}
+@article{cattoIterativeDynamicsTemporal2005,
+  title = {Iterative {{Dynamics}} with {{Temporal Coherence}}},
+  author = {Catto, Erin and Park, Menlo},
+  date = {2005},
+  url = {https://api.semanticscholar.org/CorpusID:11084512},
+  abstract = {This article introduces an iterative constraint solver for rigid body dynamics with contact. Our algorithm requires linear time and space and is easily expressed in vector form for fast execution on vector processors. The use of an iterative algorithm opens up the possibility for exploiting temporal coherence. A method for caching contact forces is presented that allows contact points to move from step to step and to appear and disappear. Examples are provided to illustrate the effectiveness of the algorithm.},
+  langid = {english}
+}
