--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -3,6 +3,8 @@ title: Robotics Simulators
 description: A (almost) complete list of robotics simulators
 ---
 
+import SimulatorsTable from "../../../components/Robotics/SimulatorsTable.astro"
+
 This list is intended to be as complete as possible but obviously it is virtually impossible to list **ALL** the robot simulators out there, that's the reason why the “almost” in the description of this note. In case you know of a simulator that is not included in this list, here are the possible reasons for its absence:
 - I haven't updated the list yet: there are always new simulators.
 - I have not yet come across it: the simulator can be very niche.
@@ -26,39 +28,35 @@ What makes a robotics simulator a robotics simulator:
 
 ## Overview
 
-| Name                                                                                        | Paper                                         | Physics Engine                                                                    | Rendering                                                        | Models | Features | Languages                                                                                                                                          | Licenses             | Active | Source code                                                   |
-|---------------------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------------------|------------------------------------------------------------------|--------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------|----------------------|--------|---------------------------------------------------------------|
-| [Gazebo (`gz`)](https://gazebosim.org/home)                                                 |                                               | DARTsim,<br/>Bullet,<br/>TPE                                                      | OGRE 1.x,<br/>OGRE-Next 2.x,<br/>OptiX                           |        |          | C++, Python                                                                                                                                        | Apache 2.0           |        | [github](https://github.com/gazebosim/gz-sim)                 |
-| [Webots](https://cyberbotics.com/)                                                          | @Webots04                                     | [ODE](https://cyberbotics.com/doc/reference/ode-open-dynamics-engine)             | [OpenGL](https://cyberbotics.com/doc/blog/Webots-2018-b-release) |        |          | C,<br/>C++,<br/>Java,<br/>Python,<br/>MATLAB,<br/>TCP/IP,<br/>[see language-setup for reference](https://cyberbotics.com/doc/guide/language-setup) | Apache 2.0           |        | [github](https://github.com/cyberbotics/webots)               |
-| [PyBullet](https://pybullet.org/wordpress/)                                                 | @coumans2021                                  | Bullet                                                                            | OpenGL, TinyRenderer (built-in CPU renderer)                     |        |          | C,<br/>C++,<br/>Python                                                                                                                             | zlib                 |        | [github](https://github.com/bulletphysics/bullet3)            |
-| [AirSim](https://microsoft.github.io/AirSim/)                                               | @shahAirSimHighFidelityVisual2017             | PhysX (default),<br/>Chaos Physics (UE >= 5)                                      |                                                                  |        |          |                                                                                                                                                    | MIT License          |        | [github](https://github.com/microsoft/AirSim)                 |
-| [ARGoS](https://www.argos-sim.info/)                                                        | @pinciroliARGoSModularMultiengine2011         | ODE,<br/>custom 3D particle engine,<br/>Chipmunk,<br/>custom 2D kinematics engine | OpenGL, POV-Ray                                                  |        |          | C++, PROTO?                                                                                                                                        | MIT License          |        | [github](https://github.com/ilpincy/argos3)                   |
-| [ARTE](https://arvc.umh.es/arte/index_en.html) (A Robotics Toolbox for Education)           | @gilDevelopmentDeploymentNew2015              |                                                                                   |                                                                  |        |          | C++                                                                                                                                                | GNU LGPL             |        | [github](https://github.com/4rtur1t0/ARTE)                    |
-| [AVIS Engine](https://avisengine.com/)                                                      | @zarifAVISEngineHighperformance2021           | Unity-based                                                                       | Unity-based                                                      |        |          | TPC-based messaging system                                                                                                                         |                      |        | [github](https://github.com/AVISEngine/AVISEngine-Simulator)  |
-| [CARLA](https://carla.org/)                                                                 | @pmlr-v78-dosovitskiy17a                      | UE-based                                                                          | UE-based                                                         |        |          | socket-based server-client                                                                                                                         | MIT License          |        | [github](https://github.com/carla-simulator/carla)            |
-| [GraspIt!](https://graspit-simulator.github.io/)                                            | @millerGraspIt2004                            | Bullet                                                                            | OpenGL                                                           |        |          |                                                                                                                                                    | GNU GPL              |        | [github](https://github.com/graspit-simulator/graspit)        |
-| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                                | @savvaHabitatPlatformEmbodied2019             |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/facebookresearch/habitat-sim)     |
-| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                                         |                                               | NVIDIAPhysX                                                                       |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
-| [MORSE](https://morse-simulator.github.io/)                                                 | @echeverriaModularOpenRobots2011              |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/morse-simulator/morse)            |
-| [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html) | @Baumgartner_PyBullet_Industrial_A_2023       | Bullet                                                                            |                                                                  |        |          | Python                                                                                                                                             |                      |        | [github](https://github.com/WBK-Robotics/pybullet_industrial) |
-| [SAPIEN](https://sapien.ucsd.edu/)                                                          | @xiangSAPIENSimulAtedPartBased2020            |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/haosulab/SAPIEN)                  |
-| [ManiSkill](https://www.maniskill.ai/) powered SAPIEN                                       |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/haosulab/ManiSkill)               |
-| [Simbad](https://simbad.sourceforge.net/)                                                   | @huguesSimbadAutonomousRobot2006              |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [sourceforge](https://sourceforge.net/projects/simbad/)       |
-| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                               | @genesisauthorsGenesisUniversalGenerative2024 |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/Genesis-Embodied-AI/Genesis)      |
-| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)                 | @lacheleSwarmSimXRealTimeSimulation2012       |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
-| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                                      | @blanco-claracoMultiVehicleSimulatorMVSim2023 |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/MRPT/mvsim)                       |
-| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                                        |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        |                                                               |
-| [Flightmare](https://uzh-rpg.github.io/flightmare/)                                         | @song2020flightmare                           |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/uzh-rpg/flightmare)               |
-| [O3DE](https://o3de.org/)                                                                   |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/o3de/o3de)                        |
-| [FlightGear](https://www.flightgear.org/)                                                   |                                               |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [gitlab](https://gitlab.com/flightgear/flightgear)            |
-| [FlightGoogles](https://flightgoggles.mit.edu/)                                             | @guerraFlightGogglesModularFramework2019      |                                                                                   |                                                                  |        |          |                                                                                                                                                    |                      |        | [github](https://github.com/mit-aera/FlightGoggles)           |
-| [DRAKE](https://drake.mit.edu/)                                                             | @drake                                        | N/A, focus on dynamics                                                            | VTK,<br/>OpenGL,<br/>GltfClient                                  |        |          | C++, Python                                                                                                                                        | 3-Clause BSD License |        | [github](https://github.com/RobotLocomotion/drake)            |
-| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)                | @rohmerVREPVersatileScalable2013              | Bullet,<br/>ODE,<br/>MuJoCo,<br/>Vortex,<br/>,Newton                              |                                                                  |        |          |                                                                                                                                                    | GNU GPL              |        | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib)  |
+| Name                                                                              | Paper                                         | Physics Engine                                                                    | Rendering                                                                                                    | Models | Features | Languages                                                                                                                                          | Licenses                                                                            | Active                  | Source code                                                  |
+|-----------------------------------------------------------------------------------|-----------------------------------------------|-----------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------|-------------------------|--------------------------------------------------------------|
+| [Gazebo (`gz`)](https://gazebosim.org/home)                                       | -                                             | DARTsim,<br/>Bullet,<br/>TPE                                                      | OGRE 1.x,<br/>OGRE-Next 2.x,<br/>OptiX                                                                       |        |          | C++, Python                                                                                                                                        | Apache 2.0                                                                          |                         | [github](https://github.com/gazebosim/gz-sim)                |
+| [Webots](https://cyberbotics.com/)                                                | @Webots04                                     | [ODE](https://cyberbotics.com/doc/reference/ode-open-dynamics-engine)             | [OpenGL](https://cyberbotics.com/doc/blog/Webots-2018-b-release)                                             |        |          | C,<br/>C++,<br/>Java,<br/>Python,<br/>MATLAB,<br/>TCP/IP,<br/>[see language-setup for reference](https://cyberbotics.com/doc/guide/language-setup) | Apache 2.0                                                                          |                         | [github](https://github.com/cyberbotics/webots)              |
+| [PyBullet](https://pybullet.org/wordpress/)                                       | @coumans2021                                  | Bullet                                                                            | OpenGL, TinyRenderer (built-in CPU renderer)                                                                 |        |          | C,<br/>C++,<br/>Python                                                                                                                             | zlib                                                                                |                         | [github](https://github.com/bulletphysics/bullet3)           |
+| [AirSim](https://microsoft.github.io/AirSim/)                                     | @shahAirSimHighFidelityVisual2017             | PhysX (default),<br/>Chaos Physics (UE >= 5)                                      | UE-based                                                                                                     |        |          | RPC-based,<br/>C++,<br/>Python,<br/>C#,<br/>Java                                                                                                   | MIT License                                                                         |                         | [github](https://github.com/microsoft/AirSim)                |
+| [ARGoS](https://www.argos-sim.info/)                                              | @pinciroliARGoSModularMultiengine2011         | ODE,<br/>custom 3D particle engine,<br/>Chipmunk,<br/>custom 2D kinematics engine | OpenGL, POV-Ray                                                                                              |        |          | C++, PROTO?                                                                                                                                        | MIT License                                                                         |                         | [github](https://github.com/ilpincy/argos3)                  |
+| [ARTE](https://arvc.umh.es/arte/index_en.html) (A Robotics Toolbox for Education) | @gilDevelopmentDeploymentNew2015              | Model-based,<br/>Simscape Multibody                                               |                                                                                                              |        |          | MATLAB,<br/>RAPID                                                                                                                                  | GNU LGPL                                                                            |                         | [github](https://github.com/4rtur1t0/ARTE)                   |
+| [CARLA](https://carla.org/)                                                       | @pmlr-v78-dosovitskiy17a                      | UE-based                                                                          | UE-based                                                                                                     |        |          | socket-based,<br/>server-client                                                                                                                    | MIT License                                                                         |                         | [github](https://github.com/carla-simulator/carla)           |
+| [GraspIt!](https://graspit-simulator.github.io/)                                  | @millerGraspIt2004                            | Bullet                                                                            | OpenGL                                                                                                       |        |          |                                                                                                                                                    | GNU GPL                                                                             |                         | [github](https://github.com/graspit-simulator/graspit)       |
+| [Isaac Sim](https://developer.nvidia.com/isaac/sim)                               | -                                             | PhysX                                                                             | [Omniverse RTX Renderer](https://docs.omniverse.nvidia.com/materials-and-rendering/latest/rtx-renderer.html) |        |          | Python                                                                                                                                             | [see](https://resources.nvidia.com/en-us-omniverse-enterprise/nvidia-omniverse-ent) |                         | Closed-source                                                |
+| [MORSE](https://morse-simulator.github.io/)                                       | @echeverriaModularOpenRobots2011              | Bullet                                                                            | Blender-based                                                                                                |        |          | socket-based,<br/>Python                                                                                                                           |                                                                                     | discontinued (Feb 2016) | [github](https://github.com/morse-simulator/morse)           |
+| [SAPIEN](https://sapien.ucsd.edu/)                                                | @xiangSAPIENSimulAtedPartBased2020            | PhysX                                                                             | `SapienRenderer` (Vulkan)                                                                                    |        |          | Python                                                                                                                                             | MIT License                                                                         |                         | [github](https://github.com/haosulab/SAPIEN)                 |
+| 🔍 [Genesis](https://genesis-world.readthedocs.io/en/latest/)                     | @genesisauthorsGenesisUniversalGenerative2024 |                                                                                   |                                                                                                              |        |          | Python                                                                                                                                             | Apache 2.0                                                                          |                         | [github](https://github.com/Genesis-Embodied-AI/Genesis)     |
+| [SwarmSimX](https://link.springer.com/chapter/10.1007/978-3-642-34327-8_34)       | @lacheleSwarmSimXRealTimeSimulation2012       | PhysX                                                                             | OGRE                                                                                                         |        |          | C++                                                                                                                                                | ???                                                                                 |                         | I could not find it                                          |
+| [MVSim](https://mvsimulator.readthedocs.io/en/latest/)                            | @blanco-claracoMultiVehicleSimulatorMVSim2023 | Box2D                                                                             |                                                                                                              |        |          | C++,<br/>Python                                                                                                                                    | 3-Clause BSD License                                                                |                         | [github](https://github.com/MRPT/mvsim)                      |
+| [Flightmare](https://uzh-rpg.github.io/flightmare/)                               | @song2020flightmare                           | Unity-based                                                                       | Unity-based                                                                                                  |        |          | Python,<br/>ZeroMQ,<br/>C++ (core)                                                                                                                 | MIT License                                                                         |                         | [github](https://github.com/uzh-rpg/flightmare)              |
+| [DRAKE](https://drake.mit.edu/)                                                   | @drake                                        | N/A, focus on dynamics                                                            | VTK,<br/>OpenGL,<br/>GltfClient                                                                              |        |          | C++, Python                                                                                                                                        | 3-Clause BSD License                                                                |                         | [github](https://github.com/RobotLocomotion/drake)           |
+| [CoppeliaSim (formerly V-REP)](https://www.coppeliarobotics.com/) (core lib)      | @rohmerVREPVersatileScalable2013              | Bullet,<br/>ODE,<br/>MuJoCo,<br/>Vortex,<br/>Newton                               |                                                                                                              |        |          |                                                                                                                                                    | GNU GPL                                                                             |                         | [github](https://github.com/CoppeliaRobotics/coppeliaSimLib) |
+| [Habitat Simulator](https://aihabitat.org/docs/habitat-sim/)                      | @savvaHabitatPlatformEmbodied2019             | Bullet?                                                                           |                                                                                                              |        |          |                                                                                                                                                    | MIT License                                                                         |                         | [github](https://github.com/facebookresearch/habitat-sim)    |
+| [Simbad](https://simbad.sourceforge.net/)                                         | @huguesSimbadAutonomousRobot2006              |                                                                                   |                                                                                                              |        |          |                                                                                                                                                    |                                                                                     |                         | [sourceforge](https://sourceforge.net/projects/simbad/)      |
+| [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                              | -                                             |                                                                                   |                                                                                                              |        |          | C++,<br/>C#,<br/>Python                                                                                                                            | Commercial                                                                          |                         |                                                              |
+| ~[AVIS Engine](https://avisengine.com/)~                                          | @zarifAVISEngineHighperformance2021           | Unity-based                                                                       | Unity-based                                                                                                  |        |          | TPC-based messaging system                                                                                                                         | unspecified                                                                         |                         | [github](https://github.com/AVISEngine/AVISEngine-Simulator) |
 
 
 | Physics Engine                                                                                                                        |                                                                                                              | License                                                                                    | Source Code                                                            |
 |---------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|------------------------------------------------------------------------|
-| [TPE](https://community.gazebosim.org/t/announcing-new-physics-engine-tpe-trivial-physics-engine/629)                                 | Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo. | Apache 2.0                                                                                 | [github](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) |
+| [DARTsim](https://dartsim.github.io/) (Dynamic Animation and Robotics Toolkit)                                                        |                                                                                                              | 2-Clause BSD License                                                                       | [github](https://github.com/dartsim/dart)                              |
+| [TPE](https://community.gazebosim.org/t/announcing-new-physics-engine-tpe-trivial-physics-engine/629) (Trivial Physics Engine)        | Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo. | Apache 2.0                                                                                 | [github](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) |
 | [Bullet](https://pybullet.org/wordpress/)                                                                                             |                                                                                                              | zlib                                                                                       | [github](https://github.com/bulletphysics/bullet3)                     |
 | [PhysX](https://nvidia-omniverse.github.io/PhysX/physx/5.5.1/)                                                                        |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/NVIDIA-Omniverse/PhysX)                    |
 | [MuJoCo](https://mujoco.org/), paper @todorovMuJoCoPhysicsEngine2012, source code [github](https://github.com/google-deepmind/mujoco) |                                                                                                              | Apache 2.0                                                                                 | [github](https://github.com/google-deepmind/mujoco)                    |
@@ -66,10 +64,16 @@ What makes a robotics simulator a robotics simulator:
 | [Vortex Studio](https://www.cm-labs.com/en/vortex-studio/)                                                                            |                                                                                                              | Commercial                                                                                 | -                                                                      |
 | [Newton Dynamics](https://newtondynamics.com/forum/newton.php)                                                                        |                                                                                                              | zlib                                                                                       | [github](https://github.com/MADEAPPS/newton-dynamics/)                 |
 | (2D) [Chipmunk](https://chipmunk-physics.net/)                                                                                        |                                                                                                              |                                                                                            |                                                                        |
+| (2D) [Box2D](https://box2d.org/), paper @cattoIterativeDynamicsTemporal2005                                                           |                                                                                                              | MIT License                                                                                | [github](https://github.com/erincatto/box2d)                           |
+| [Simscape Multibody](https://www.mathworks.com/products/simscape-multibody.html) (formerly SimMechanics) product of MathWorks         |                                                                                                              | Commercial                                                                                 | -                                                                      |
+
+Others Physics Engine:
+- [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) built-in in Unreal Engine
 
 Game engines:
 - [UE 4 uses PhysX as default](https://dev.epicgames.com/documentation/en-us/unreal-engine/physics?application_version=4.27), EpicGame is introducing [Chaos Physics](https://dev.epicgames.com/documentation/en-us/unreal-engine/chaos-physics-overview?application_version=4.27) as future replacement for PhysX.
 - [Unity uses PhysX as physic engine](https://docs.unity3d.com/Manual/PhysicsSection.html)
+- [O3DE](https://o3de.org/) open-source, [github](https://github.com/o3de/o3de)
 
 List frameworks and integrations:
 - gazebo: [Gazebo integrations](https://gazebosim.org/docs/latest/projects_using_gazebo/#gazebo-integrations)
@@ -104,10 +108,14 @@ Cool projects:
 
 Subject specific:
 - [Neurorobotics Platform (NRP)](https://neurorobotics.net/): Internet-accessible simulation of robots controlled by spiking neural networks, source code [bitbucket](https://bitbucket.org/hbpneurorobotics/neurorobotics-platform/src/master/)
+- [FlightGear](https://www.flightgear.org/), [gitlab](https://gitlab.com/flightgear/flightgear)
 
 ## Frameworks
 
 - [AI2-Thor](https://ai2thor.allenai.org/), @kolveAI2THORInteractive3D2022, source code [github](https://github.com/allenai/ai2thor)
+- [PyBullet Industrial](https://pybullet-industrial.readthedocs.io/en/latest/how_to_use.html), @Baumgartner_PyBullet_Industrial_A_2023, [github](https://github.com/WBK-Robotics/pybullet_industrial)
+- [ManiSkill](https://www.maniskill.ai/) powered SAPIEN, @taoManiSkill3GPUParallelized2024 [github](https://github.com/haosulab/ManiSkill)
+- [FlightGoogles](https://flightgoggles.mit.edu/) based on Unity, @guerraFlightGogglesModularFramework2019, [github](https://github.com/mit-aera/FlightGoggles)
 
 ## from /Ly0n/awesome-robotic-tooling
 
