add section for topics debug

--- a/src/content/docs/en/ros2-topics.mdx
+++ b/src/content/docs/en/ros2-topics.mdx
@@ -122,3 +122,9 @@ Let’s create a minimal subscriber that subscribes our custom message definitio
 "A set of **QoS policies** combine to form a **QoS profile**. Given the complexity of choosing the correct QoS policies for a given scenario, ROS 2 provides a set of predefined QoS profiles for common use cases (e.g. sensor data). At the same time, developers are given the flexibility to control specific policies of the QoS profiles."
 
 Check [Quality of Service settings](https://docs.ros.org/en/humble/Concepts/Intermediate/About-Quality-of-Service-Settings.html) for more details.
+
+## Debugging Strategies
+
+Two main debugging approaches in ROS:
+- Command Line Interface (`cli`): Terminal-Based Debugging
+- Graphical User Interface (GUI): Visual Debugging with rqt Tools
