add ros companies repo

--- a/src/content/docs/en/ros2-intro.mdx
+++ b/src/content/docs/en/ros2-intro.mdx
@@ -101,7 +101,7 @@ Drivers availability.
 ### ROS Ecosystem: [map](http://metrorobots.com/rosmap.html)
 
 - Schools
-- Company
+- Company. See this amazing collection of companies using ros, [ROS Robotics Companies](https://github.com/vmayoral/ros-robotics-companies) by Víctor Mayoral Vilches.
 - Research Institute
 - More
 
