add openrave sim

--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -766,3 +766,12 @@ DOI: 10.1007/11840541_68},
   abstract = {This article introduces an iterative constraint solver for rigid body dynamics with contact. Our algorithm requires linear time and space and is easily expressed in vector form for fast execution on vector processors. The use of an iterative algorithm opens up the possibility for exploiting temporal coherence. A method for caching contact forces is presented that allows contact points to move from step to step and to appear and disappear. Examples are provided to illustrate the effectiveness of the algorithm.},
   langid = {english}
 }
+@thesis{diankovAutomatedConstructionRobotic2010,
+  type = {phdthesis},
+  title = {Automated Construction of Robotic Manipulation Programs},
+  author = {Diankov, Rosen},
+  date = {2010-08},
+  number = {CMU-RI-TR-10-29},
+  institution = {Carnegie Mellon University, Robotics Institute},
+  url = {http://www.programmingvision.com/rosen_diankov_thesis.pdf}
+}
