--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -49,6 +49,7 @@ What makes a robotics simulator a robotics simulator:
 | [Simbad](https://simbad.sourceforge.net/)                                         | @huguesSimbadAutonomousRobot2006              |                                                                                   |                                                                                                              |        |          |                                                                                                                                                    |                                                                                     |                         | [sourceforge](https://sourceforge.net/projects/simbad/)      |
 | [AGX Dynamics](https://www.algoryx.se/agx-dynamics/)                              | -                                             |                                                                                   |                                                                                                              |        |          | C++,<br/>C#,<br/>Python                                                                                                                            | Commercial                                                                          |                         |                                                              |
 | ~[AVIS Engine](https://avisengine.com/)~                                          | @zarifAVISEngineHighperformance2021           | Unity-based                                                                       | Unity-based                                                                                                  |        |          | TPC-based messaging system                                                                                                                         | unspecified                                                                         |                         | [github](https://github.com/AVISEngine/AVISEngine-Simulator) |
+| [OpenRAVE](https://www.openrave.org/)                                             | @diankovAutomatedConstructionRobotic2010      | Bullet                                                                            | ?                                                                                                            |        |          |                                                                                                                                                    | Apache 2.0, (core lib) GNU LGPL                                                     |                         | [github](https://github.com/rdiankov/openrave)               |
 
 
 | Physics Engine                                                                                                                        |                                                                                                              | License                                                                                    | Source Code                                                            |
