add DOE section

--- a/src/content/docs/en/research-workflow.mdx
+++ b/src/content/docs/en/research-workflow.mdx
@@ -34,6 +34,11 @@ To fully understand a paper (attempt to virtually re-implement the paper):
 - Discussion compared to other methods
 - Open-ended research questions
 
+## How to Design Experiments
+
+The Design of experiments (DOE): 
+- [Designing Simulation Experiments](https://informs-sim.org/wsc13papers/includes/files/029.pdf)
+
 ## How to Write
 
 How to write:
