--- a/src/content/docs/en/ros2-services.mdx
+++ b/src/content/docs/en/ros2-services.mdx
@@ -3,6 +3,11 @@ title: ROS 2 Services
 description: Servers and clients
 ---
 
+## Services
+
+services are:
+- Strongly-typed
+
 ## Create a Custom Service defintion
 
 create `.srv` file
@@ -43,3 +48,8 @@ Add any dependencies to `package.xml`
 
 ```python filename="client.py" remoteURL="https://raw.githubusercontent.com/harleylara/ros2-intro/master/python_basics/python_basics/services/client.py"
 ```
+
+## External References
+
+- [Services - Basics Concepts ROS 2 Docs](https://docs.ros.org/en/humble/Concepts/Basic/About-Services.html)
+- [Understanding ROS2 Services - ROS 2 Docs](https://docs.ros.org/en/humble/Tutorials/Beginner-CLI-Tools/Understanding-ROS2-Services/Understanding-ROS2-Services.html)
