--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -25,7 +25,7 @@ Content Outline:
 - [Nodes](ros2-nodes)
 - [Interfaces](ros2-interfaces)
 - [Topics](ros2-topics)
-- TBA [Services](ros2-services)
+- [Services](ros2-services)
 - TBA [Quality of Service (QoS)](ros2-qos)
 - TBA [Actions](ros2-actions)
 - [Arguments, ROS arguments and parameters](ros2-parameters)
