renamed on vmware with products

--- a/src/content/docs/en/ros2.mdx
+++ b/src/content/docs/en/ros2.mdx
@@ -13,7 +13,7 @@ Knowledge required:
 - Basics of VCS (Version control system) with git. My personal recommendation is the [Pro Git 2nd Edition by Scott Chacon and Ben Straub](https://git-scm.com/book/en/v2) chapter 1, 2, and 3.
 
 Software requirements:
-- OS: Ubuntu 22.04 Desktop. I personally recommend a native Ubuntu installation on your computers. Dual-boot also works but very impractical for daily use (in my opinion). If you want to use a virtual machine I recommend using VMWare Player it's free for personal non-commercial use (runs on GNU/Linux and Windows).
+- OS: Ubuntu 22.04 Desktop. I personally recommend a native Ubuntu installation on your computers. Dual-boot also works but very impractical for daily use (in my opinion). If you want to use a virtual machine I recommend using VMware Workstation Pro it's free for personal non-commercial use (runs on GNU/Linux and Windows).
 - Install: ROS Humble, check the official documentation and follow [Ubuntu Debian packages (recommended)](https://docs.ros.org/en/humble/Installation/Ubuntu-Install-Debians.html) to install it.
 
 ## Module 1 - Basics
