add presentation on gazebo

--- a/src/content/docs/en/ros2-gazebo.mdx
+++ b/src/content/docs/en/ros2-gazebo.mdx
@@ -12,3 +12,7 @@ description: Notes, explanations and clarifications
     - `2019.07.31`: first appearance of the term `Gazebo Classic` in Gazebo Forums [Use case of multiple “worlds” in an SDF - Gazebo Community](https://community.gazebosim.org/t/use-case-of-multiple-worlds-in-an-sdf/375/2).
 `gazebo classic` EOL and 
 - In 2022.4.6 `ignition` -> (`gazebo` or in short `gz`). see [A new era for Gazebo](https://www.openrobotics.org/blog/2022/4/6/a-new-era-for-gazebo) *"we're taking the opportunity to simplify things, for us and for you."*. [A new era for Gazebo - Gazebo Community](https://community.gazebosim.org/t/a-new-era-for-gazebo/1356)
+
+## External Resources
+
+-[How to Achieve Realistic Visuals in Ignition Gazebo by Cole Biesemeyer](https://roscon.ros.org/2019/talks/roscon2019_how_to_achieve_realistic_visuals_in_ignition_gazebo.pdf): nice example of the power of gazebo.
