--- a/src/content/docs/en/simulators.mdx
+++ b/src/content/docs/en/simulators.mdx
@@ -54,6 +54,7 @@ What makes a robotics simulator a robotics simulator:
 
 | Physics Engine                                                                                                                        |                                                                                                              | License                                                                                    | Source Code                                                            |
 |---------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------------------------|------------------------------------------------------------------------|
+| 🔍 [Chrono](https://projectchrono.org/) under Project Chrono                                                                          |                                                                                                              | 3-Clause BSD License                                                                       | [github](https://github.com/projectchrono/chrono)                      |
 | [DARTsim](https://dartsim.github.io/) (Dynamic Animation and Robotics Toolkit)                                                        |                                                                                                              | 2-Clause BSD License                                                                       | [github](https://github.com/dartsim/dart)                              |
 | [TPE](https://community.gazebosim.org/t/announcing-new-physics-engine-tpe-trivial-physics-engine/629) (Trivial Physics Engine)        | Trivial Physics Engine, A custom physics engine focused on fast kinematics of large environments for Gazebo. | Apache 2.0                                                                                 | [github](https://github.com/gazebosim/gz-physics/tree/gz-physics8/tpe) |
 | [Bullet](https://pybullet.org/wordpress/)                                                                                             |                                                                                                              | zlib                                                                                       | [github](https://github.com/bulletphysics/bullet3)                     |
