add resource: How Theses Get Written

--- a/src/content/docs/en/research-workflow.mdx
+++ b/src/content/docs/en/research-workflow.mdx
@@ -2,6 +2,10 @@
 title: "My personal research workflow"
 ---
 
+## How to Plan
+
+Harley's note: I need to look for some cool resources on planning. It can be general planning, or focus on planning for research.
+
 ## How to Read
 
 How to read:
@@ -38,6 +42,8 @@ To fully understand a paper (attempt to virtually re-implement the paper):
 
 The Design of experiments (DOE): 
 - [Designing Simulation Experiments](https://informs-sim.org/wsc13papers/includes/files/029.pdf)
+- A good book to consider: [An Introduction to Error Analysis by John R. Taylor](https://www.google.com/search?q=An+Introduction+to+Error+Analysis+by+John+R.+Taylor)
+    - [Montparnasse derailment - 1895 Paris train disaster](https://en.wikipedia.org/wiki/Montparnasse_derailment)
 
 ## How to Write
 
@@ -45,6 +51,7 @@ How to write:
 - ✨✨ [The Elements of Style](https://en.wikipedia.org/wiki/The_Elements_of_Style) by Strunk and White. This is a general book on the rules of the English language that helps to improve writing style.
 - ✨ [Whitesides’ Group: Writing a Paper](https://intra.ece.ucr.edu/~rlake/Whitesides_writing_res_paper.pdf) by George. M. Whitesides
 - ✨ [Writing Technical Articles](https://researchswinger.org/others/writing-schulz.pdf) by H. Schulzrinne. Focus on computer science and electrical engineering, systems and networks.
+- ✨ [How Theses Get Written: Some Cool Tips](How Theses Get Written: Some Cool Tips)
 - [How to Write a Great Grant Proposal](https://simon.peytonjones.org/great-grant-proposal/)
 - [How to Write a Great Research Paper](https://simon.peytonjones.org/great-research-paper/)
 
